# qtzeroprops

./: .gitmodules  CMakeLists.txt  README.md  qtzeroprops.pro
include/QtZeroProps/: QZeroPropsClient.h  QZeroPropsServer.h
src/: BleClientSession.cpp  QZeroPropsBleClient.h  QZeroPropsBleService.h  QZeroPropsClient.cpp  QZeroPropsServer.cpp  QZeroPropsServerPrivate.cpp  QZeroPropsServerPrivate.h  QZeroPropsService.cpp  QZeroPropsServicePrivate.h  QZeroPropsWsServer.cpp  QZeroPropsWsServer.h  QZeroPropsWsService.cpp  QZeroPropsWsService.h  src.pro
tests/: tests.pro
tests/client/: client.pro  main.cpp
tests/qmlclient/: main.cpp  main.qml  qmlclient.pro
tests/server/: main.cpp  server.pro
